--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
-@font-face {
+/* @font-face {
   font-family: "Agustina";
   src: url(../fonts/Agustina.woff);
-}
+} */
 
 
 /*CSS variable declaration for light/dark mode*/
